--- a/examples/qdotweb_test.ipynb
+++ b/examples/qdotweb_test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'data': 'CONNECTED', 'address': 'GPIB0::5::INSTR', 'errors': '', 'command': 'connect'}\n"
+      "{'data': 'CONNECTED', 'errors': '', 'address': 'GPIB0::5::INSTR', 'command': 'connect'}\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'data': '+4.99506E+03\\n', 'address': 'GPIB0::5::INSTR', 'errors': '', 'command': 'RDGR? 2'}\n"
+      "{'data': '+4.99240E+03\\n', 'errors': '', 'address': 'GPIB0::5::INSTR', 'command': 'RDGR? 2'}\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'data': 'CLOSED', 'address': 'GPIB0::5::INSTR', 'errors': '', 'command': 'close'}\n"
+      "{'data': 'CLOSED', 'errors': '', 'address': 'GPIB0::5::INSTR', 'command': 'close'}\n"
      ]
     }
    ],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.022063140869140626 s per request\n"
+      "0.019798378944396972 s per request\n"
      ]
     }
    ],
